tests/parsing/smtlib/v2.6/errors/088_echo_bad_str_1.smt2
(set-logic ALL)
(echo foo)
