tests/parsing/smtlib/v2.6/errors/088_echo_bad_str_1.expected
File "", line 1, character 22-25:
Error Syntax error (state 157) while reading the symbol 'foo'.

